--- a/AirQuality/app/src/main/res/values/strings.xml
+++ b/AirQuality/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
 
     <string name="dialog_profile_delete_prompt">Delete profile?</string>
     <string name="dialog_profile_delete_title">Delete</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
